# WasmForge

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  rust-toolchain.toml  test-tcp-connection.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
desktop-app/: Cargo.toml
desktop-app/src/: config.rs  main.rs  module_manager.rs  tool_discovery.rs  wasm_executor.rs
docs/: EXAMPLES.md  IMPLEMENTATION_PLAN.md  MCP_COMPLIANCE.md  TEMPLATES.md  project-description.md
memory-bank/: activeContext.md  creative-phase.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
templates/assemblyscript-basic/: README.md  build.sh  package-lock.json  package.json
templates/assemblyscript-basic/assembly/: index.ts
templates/python-wasi/: README.md
templates/rust-basic/: Cargo.toml  README.md  build.sh
templates/rust-basic/src/: lib.rs
test-module/: Cargo.toml
test-module/src/: lib.rs
