[package]
name = "desktop-app"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
wasmtime = "25.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"
